Trabalho Final - Rian Turibio/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMA
    FLOAT
    FOR
    GE
    GT
    LE
    LT
    NE
    NEWLINE
    POWER
    RETURN
    SEMI
    STRING
    VOID
    WHILE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> INT MAIN LPAREN RPAREN LBRACES code RBRACES
Rule 2     code -> statement SEMICOLON
Rule 3     code -> statement SEMICOLON code
Rule 4     code -> statement IF expression LPAREN code RPAREN
Rule 5     code -> statement IF expression LPAREN code RPAREN ELSE LBRACES code RBRACES
Rule 6     statement -> ID EQUALS expression
Rule 7     statement -> expression
Rule 8     expression -> expression PLUS expression
Rule 9     expression -> expression MINUS expression
Rule 10    expression -> expression TIMES expression
Rule 11    expression -> expression DIVIDE expression
Rule 12    expression -> - expression
Rule 13    expression -> LPAREN expression RPAREN
Rule 14    expression -> INTEGER
Rule 15    expression -> DOUBLE
Rule 16    expression -> CHAR
Rule 17    expression -> expression GREATER expression
Rule 18    expression -> expression LESS expression
Rule 19    expression -> expression GREATEQ expression
Rule 20    expression -> expression LESSEQ expression
Rule 21    expression -> expression EQEQ expression
Rule 22    expression -> expression NOTEQ expression
Rule 23    expression -> expression AND expression
Rule 24    expression -> expression OR expression
Rule 25    expression -> ID
Rule 26    expression -> bool
Rule 27    bool -> TRUE
Rule 28    bool -> FALSE

Terminals, with rules where they appear

-                    : 12
AND                  : 23
CHAR                 : 16
COMMA                : 
DIVIDE               : 11
DOUBLE               : 15
ELSE                 : 5
EQEQ                 : 21
EQUALS               : 6
FALSE                : 28
FLOAT                : 
FOR                  : 
GE                   : 
GREATEQ              : 19
GREATER              : 17
GT                   : 
ID                   : 6 25
IF                   : 4 5
INT                  : 1
INTEGER              : 14
LBRACES              : 1 5
LE                   : 
LESS                 : 18
LESSEQ               : 20
LPAREN               : 1 4 5 13
LT                   : 
MAIN                 : 1
MINUS                : 9
NE                   : 
NEWLINE              : 
NOTEQ                : 22
OR                   : 24
PLUS                 : 8
POWER                : 
RBRACES              : 1 5
RETURN               : 
RPAREN               : 1 4 5 13
SEMI                 : 
SEMICOLON            : 2 3
STRING               : 
TIMES                : 10
TRUE                 : 27
VOID                 : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

bool                 : 26
code                 : 1 3 4 5 5
expression           : 4 5 6 7 8 8 9 9 10 10 11 11 12 13 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24
programa             : 0
statement            : 2 3 4 5

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . INT MAIN LPAREN RPAREN LBRACES code RBRACES

    INT             shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> INT . MAIN LPAREN RPAREN LBRACES code RBRACES

    MAIN            shift and go to state 3


state 3

    (1) programa -> INT MAIN . LPAREN RPAREN LBRACES code RBRACES

    LPAREN          shift and go to state 4


state 4

    (1) programa -> INT MAIN LPAREN . RPAREN LBRACES code RBRACES

    RPAREN          shift and go to state 5


state 5

    (1) programa -> INT MAIN LPAREN RPAREN . LBRACES code RBRACES

    LBRACES         shift and go to state 6


state 6

    (1) programa -> INT MAIN LPAREN RPAREN LBRACES . code RBRACES
    (2) code -> . statement SEMICOLON
    (3) code -> . statement SEMICOLON code
    (4) code -> . statement IF expression LPAREN code RPAREN
    (5) code -> . statement IF expression LPAREN code RPAREN ELSE LBRACES code RBRACES
    (6) statement -> . ID EQUALS expression
    (7) statement -> . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . - expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . INTEGER
    (15) expression -> . DOUBLE
    (16) expression -> . CHAR
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression AND expression
    (24) expression -> . expression OR expression
    (25) expression -> . ID
    (26) expression -> . bool
    (27) bool -> . TRUE
    (28) bool -> . FALSE

    ID              shift and go to state 11
    -               shift and go to state 12
    LPAREN          shift and go to state 7
    INTEGER         shift and go to state 13
    DOUBLE          shift and go to state 14
    CHAR            shift and go to state 15
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    code                           shift and go to state 8
    statement                      shift and go to state 9
    expression                     shift and go to state 10
    bool                           shift and go to state 16

state 7

    (13) expression -> LPAREN . expression RPAREN
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . - expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . INTEGER
    (15) expression -> . DOUBLE
    (16) expression -> . CHAR
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression AND expression
    (24) expression -> . expression OR expression
    (25) expression -> . ID
    (26) expression -> . bool
    (27) bool -> . TRUE
    (28) bool -> . FALSE

    -               shift and go to state 12
    LPAREN          shift and go to state 7
    INTEGER         shift and go to state 13
    DOUBLE          shift and go to state 14
    CHAR            shift and go to state 15
    ID              shift and go to state 20
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    expression                     shift and go to state 19
    bool                           shift and go to state 16

state 8

    (1) programa -> INT MAIN LPAREN RPAREN LBRACES code . RBRACES

    RBRACES         shift and go to state 21


state 9

    (2) code -> statement . SEMICOLON
    (3) code -> statement . SEMICOLON code
    (4) code -> statement . IF expression LPAREN code RPAREN
    (5) code -> statement . IF expression LPAREN code RPAREN ELSE LBRACES code RBRACES

    SEMICOLON       shift and go to state 22
    IF              shift and go to state 23


state 10

    (7) statement -> expression .
    (8) expression -> expression . PLUS expression
    (9) expression -> expression . MINUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . DIVIDE expression
    (17) expression -> expression . GREATER expression
    (18) expression -> expression . LESS expression
    (19) expression -> expression . GREATEQ expression
    (20) expression -> expression . LESSEQ expression
    (21) expression -> expression . EQEQ expression
    (22) expression -> expression . NOTEQ expression
    (23) expression -> expression . AND expression
    (24) expression -> expression . OR expression

    SEMICOLON       reduce using rule 7 (statement -> expression .)
    IF              reduce using rule 7 (statement -> expression .)
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    GREATER         shift and go to state 28
    LESS            shift and go to state 29
    GREATEQ         shift and go to state 30
    LESSEQ          shift and go to state 31
    EQEQ            shift and go to state 32
    NOTEQ           shift and go to state 33
    AND             shift and go to state 34
    OR              shift and go to state 35


state 11

    (6) statement -> ID . EQUALS expression
    (25) expression -> ID .

    EQUALS          shift and go to state 36
    PLUS            reduce using rule 25 (expression -> ID .)
    MINUS           reduce using rule 25 (expression -> ID .)
    TIMES           reduce using rule 25 (expression -> ID .)
    DIVIDE          reduce using rule 25 (expression -> ID .)
    GREATER         reduce using rule 25 (expression -> ID .)
    LESS            reduce using rule 25 (expression -> ID .)
    GREATEQ         reduce using rule 25 (expression -> ID .)
    LESSEQ          reduce using rule 25 (expression -> ID .)
    EQEQ            reduce using rule 25 (expression -> ID .)
    NOTEQ           reduce using rule 25 (expression -> ID .)
    AND             reduce using rule 25 (expression -> ID .)
    OR              reduce using rule 25 (expression -> ID .)
    SEMICOLON       reduce using rule 25 (expression -> ID .)
    IF              reduce using rule 25 (expression -> ID .)


state 12

    (12) expression -> - . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . - expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . INTEGER
    (15) expression -> . DOUBLE
    (16) expression -> . CHAR
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression AND expression
    (24) expression -> . expression OR expression
    (25) expression -> . ID
    (26) expression -> . bool
    (27) bool -> . TRUE
    (28) bool -> . FALSE

    -               shift and go to state 12
    LPAREN          shift and go to state 7
    INTEGER         shift and go to state 13
    DOUBLE          shift and go to state 14
    CHAR            shift and go to state 15
    ID              shift and go to state 20
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    expression                     shift and go to state 37
    bool                           shift and go to state 16

state 13

    (14) expression -> INTEGER .

    PLUS            reduce using rule 14 (expression -> INTEGER .)
    MINUS           reduce using rule 14 (expression -> INTEGER .)
    TIMES           reduce using rule 14 (expression -> INTEGER .)
    DIVIDE          reduce using rule 14 (expression -> INTEGER .)
    GREATER         reduce using rule 14 (expression -> INTEGER .)
    LESS            reduce using rule 14 (expression -> INTEGER .)
    GREATEQ         reduce using rule 14 (expression -> INTEGER .)
    LESSEQ          reduce using rule 14 (expression -> INTEGER .)
    EQEQ            reduce using rule 14 (expression -> INTEGER .)
    NOTEQ           reduce using rule 14 (expression -> INTEGER .)
    AND             reduce using rule 14 (expression -> INTEGER .)
    OR              reduce using rule 14 (expression -> INTEGER .)
    SEMICOLON       reduce using rule 14 (expression -> INTEGER .)
    IF              reduce using rule 14 (expression -> INTEGER .)
    RPAREN          reduce using rule 14 (expression -> INTEGER .)
    LPAREN          reduce using rule 14 (expression -> INTEGER .)


state 14

    (15) expression -> DOUBLE .

    PLUS            reduce using rule 15 (expression -> DOUBLE .)
    MINUS           reduce using rule 15 (expression -> DOUBLE .)
    TIMES           reduce using rule 15 (expression -> DOUBLE .)
    DIVIDE          reduce using rule 15 (expression -> DOUBLE .)
    GREATER         reduce using rule 15 (expression -> DOUBLE .)
    LESS            reduce using rule 15 (expression -> DOUBLE .)
    GREATEQ         reduce using rule 15 (expression -> DOUBLE .)
    LESSEQ          reduce using rule 15 (expression -> DOUBLE .)
    EQEQ            reduce using rule 15 (expression -> DOUBLE .)
    NOTEQ           reduce using rule 15 (expression -> DOUBLE .)
    AND             reduce using rule 15 (expression -> DOUBLE .)
    OR              reduce using rule 15 (expression -> DOUBLE .)
    SEMICOLON       reduce using rule 15 (expression -> DOUBLE .)
    IF              reduce using rule 15 (expression -> DOUBLE .)
    RPAREN          reduce using rule 15 (expression -> DOUBLE .)
    LPAREN          reduce using rule 15 (expression -> DOUBLE .)


state 15

    (16) expression -> CHAR .

    PLUS            reduce using rule 16 (expression -> CHAR .)
    MINUS           reduce using rule 16 (expression -> CHAR .)
    TIMES           reduce using rule 16 (expression -> CHAR .)
    DIVIDE          reduce using rule 16 (expression -> CHAR .)
    GREATER         reduce using rule 16 (expression -> CHAR .)
    LESS            reduce using rule 16 (expression -> CHAR .)
    GREATEQ         reduce using rule 16 (expression -> CHAR .)
    LESSEQ          reduce using rule 16 (expression -> CHAR .)
    EQEQ            reduce using rule 16 (expression -> CHAR .)
    NOTEQ           reduce using rule 16 (expression -> CHAR .)
    AND             reduce using rule 16 (expression -> CHAR .)
    OR              reduce using rule 16 (expression -> CHAR .)
    SEMICOLON       reduce using rule 16 (expression -> CHAR .)
    IF              reduce using rule 16 (expression -> CHAR .)
    RPAREN          reduce using rule 16 (expression -> CHAR .)
    LPAREN          reduce using rule 16 (expression -> CHAR .)


state 16

    (26) expression -> bool .

    PLUS            reduce using rule 26 (expression -> bool .)
    MINUS           reduce using rule 26 (expression -> bool .)
    TIMES           reduce using rule 26 (expression -> bool .)
    DIVIDE          reduce using rule 26 (expression -> bool .)
    GREATER         reduce using rule 26 (expression -> bool .)
    LESS            reduce using rule 26 (expression -> bool .)
    GREATEQ         reduce using rule 26 (expression -> bool .)
    LESSEQ          reduce using rule 26 (expression -> bool .)
    EQEQ            reduce using rule 26 (expression -> bool .)
    NOTEQ           reduce using rule 26 (expression -> bool .)
    AND             reduce using rule 26 (expression -> bool .)
    OR              reduce using rule 26 (expression -> bool .)
    SEMICOLON       reduce using rule 26 (expression -> bool .)
    IF              reduce using rule 26 (expression -> bool .)
    RPAREN          reduce using rule 26 (expression -> bool .)
    LPAREN          reduce using rule 26 (expression -> bool .)


state 17

    (27) bool -> TRUE .

    PLUS            reduce using rule 27 (bool -> TRUE .)
    MINUS           reduce using rule 27 (bool -> TRUE .)
    TIMES           reduce using rule 27 (bool -> TRUE .)
    DIVIDE          reduce using rule 27 (bool -> TRUE .)
    GREATER         reduce using rule 27 (bool -> TRUE .)
    LESS            reduce using rule 27 (bool -> TRUE .)
    GREATEQ         reduce using rule 27 (bool -> TRUE .)
    LESSEQ          reduce using rule 27 (bool -> TRUE .)
    EQEQ            reduce using rule 27 (bool -> TRUE .)
    NOTEQ           reduce using rule 27 (bool -> TRUE .)
    AND             reduce using rule 27 (bool -> TRUE .)
    OR              reduce using rule 27 (bool -> TRUE .)
    SEMICOLON       reduce using rule 27 (bool -> TRUE .)
    IF              reduce using rule 27 (bool -> TRUE .)
    RPAREN          reduce using rule 27 (bool -> TRUE .)
    LPAREN          reduce using rule 27 (bool -> TRUE .)


state 18

    (28) bool -> FALSE .

    PLUS            reduce using rule 28 (bool -> FALSE .)
    MINUS           reduce using rule 28 (bool -> FALSE .)
    TIMES           reduce using rule 28 (bool -> FALSE .)
    DIVIDE          reduce using rule 28 (bool -> FALSE .)
    GREATER         reduce using rule 28 (bool -> FALSE .)
    LESS            reduce using rule 28 (bool -> FALSE .)
    GREATEQ         reduce using rule 28 (bool -> FALSE .)
    LESSEQ          reduce using rule 28 (bool -> FALSE .)
    EQEQ            reduce using rule 28 (bool -> FALSE .)
    NOTEQ           reduce using rule 28 (bool -> FALSE .)
    AND             reduce using rule 28 (bool -> FALSE .)
    OR              reduce using rule 28 (bool -> FALSE .)
    SEMICOLON       reduce using rule 28 (bool -> FALSE .)
    IF              reduce using rule 28 (bool -> FALSE .)
    RPAREN          reduce using rule 28 (bool -> FALSE .)
    LPAREN          reduce using rule 28 (bool -> FALSE .)


state 19

    (13) expression -> LPAREN expression . RPAREN
    (8) expression -> expression . PLUS expression
    (9) expression -> expression . MINUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . DIVIDE expression
    (17) expression -> expression . GREATER expression
    (18) expression -> expression . LESS expression
    (19) expression -> expression . GREATEQ expression
    (20) expression -> expression . LESSEQ expression
    (21) expression -> expression . EQEQ expression
    (22) expression -> expression . NOTEQ expression
    (23) expression -> expression . AND expression
    (24) expression -> expression . OR expression

    RPAREN          shift and go to state 38
    PLUS            shift and go to state 24
    MINUS           shift and go to state 25
    TIMES           shift and go to state 26
    DIVIDE          shift and go to state 27
    GREATER         shift and go to state 28
    LESS            shift and go to state 29
    GREATEQ         shift and go to state 30
    LESSEQ          shift and go to state 31
    EQEQ            shift and go to state 32
    NOTEQ           shift and go to state 33
    AND             shift and go to state 34
    OR              shift and go to state 35


state 20

    (25) expression -> ID .

    RPAREN          reduce using rule 25 (expression -> ID .)
    PLUS            reduce using rule 25 (expression -> ID .)
    MINUS           reduce using rule 25 (expression -> ID .)
    TIMES           reduce using rule 25 (expression -> ID .)
    DIVIDE          reduce using rule 25 (expression -> ID .)
    GREATER         reduce using rule 25 (expression -> ID .)
    LESS            reduce using rule 25 (expression -> ID .)
    GREATEQ         reduce using rule 25 (expression -> ID .)
    LESSEQ          reduce using rule 25 (expression -> ID .)
    EQEQ            reduce using rule 25 (expression -> ID .)
    NOTEQ           reduce using rule 25 (expression -> ID .)
    AND             reduce using rule 25 (expression -> ID .)
    OR              reduce using rule 25 (expression -> ID .)
    SEMICOLON       reduce using rule 25 (expression -> ID .)
    IF              reduce using rule 25 (expression -> ID .)
    LPAREN          reduce using rule 25 (expression -> ID .)


state 21

    (1) programa -> INT MAIN LPAREN RPAREN LBRACES code RBRACES .

    $end            reduce using rule 1 (programa -> INT MAIN LPAREN RPAREN LBRACES code RBRACES .)


state 22

    (2) code -> statement SEMICOLON .
    (3) code -> statement SEMICOLON . code
    (2) code -> . statement SEMICOLON
    (3) code -> . statement SEMICOLON code
    (4) code -> . statement IF expression LPAREN code RPAREN
    (5) code -> . statement IF expression LPAREN code RPAREN ELSE LBRACES code RBRACES
    (6) statement -> . ID EQUALS expression
    (7) statement -> . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . - expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . INTEGER
    (15) expression -> . DOUBLE
    (16) expression -> . CHAR
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression AND expression
    (24) expression -> . expression OR expression
    (25) expression -> . ID
    (26) expression -> . bool
    (27) bool -> . TRUE
    (28) bool -> . FALSE

    RBRACES         reduce using rule 2 (code -> statement SEMICOLON .)
    RPAREN          reduce using rule 2 (code -> statement SEMICOLON .)
    ID              shift and go to state 11
    -               shift and go to state 12
    LPAREN          shift and go to state 7
    INTEGER         shift and go to state 13
    DOUBLE          shift and go to state 14
    CHAR            shift and go to state 15
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    statement                      shift and go to state 9
    code                           shift and go to state 39
    expression                     shift and go to state 10
    bool                           shift and go to state 16

state 23

    (4) code -> statement IF . expression LPAREN code RPAREN
    (5) code -> statement IF . expression LPAREN code RPAREN ELSE LBRACES code RBRACES
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . - expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . INTEGER
    (15) expression -> . DOUBLE
    (16) expression -> . CHAR
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression AND expression
    (24) expression -> . expression OR expression
    (25) expression -> . ID
    (26) expression -> . bool
    (27) bool -> . TRUE
    (28) bool -> . FALSE

    -               shift and go to state 12
    LPAREN          shift and go to state 7
    INTEGER         shift and go to state 13
    DOUBLE          shift and go to state 14
    CHAR            shift and go to state 15
    ID              shift and go to state 20
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    expression                     shift and go to state 40
    bool                           shift and go to state 16

state 24

    (8) expression -> expression PLUS . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . - expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . INTEGER
    (15) expression -> . DOUBLE
    (16) expression -> . CHAR
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression AND expression
    (24) expression -> . expression OR expression
    (25) expression -> . ID
    (26) expression -> . bool
    (27) bool -> . TRUE
    (28) bool -> . FALSE

    -               shift and go to state 12
    LPAREN          shift and go to state 7
    INTEGER         shift and go to state 13
    DOUBLE          shift and go to state 14
    CHAR            shift and go to state 15
    ID              shift and go to state 20
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    expression                     shift and go to state 41
    bool                           shift and go to state 16

state 25

    (9) expression -> expression MINUS . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . - expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . INTEGER
    (15) expression -> . DOUBLE
    (16) expression -> . CHAR
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression AND expression
    (24) expression -> . expression OR expression
    (25) expression -> . ID
    (26) expression -> . bool
    (27) bool -> . TRUE
    (28) bool -> . FALSE

    -               shift and go to state 12
    LPAREN          shift and go to state 7
    INTEGER         shift and go to state 13
    DOUBLE          shift and go to state 14
    CHAR            shift and go to state 15
    ID              shift and go to state 20
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    expression                     shift and go to state 42
    bool                           shift and go to state 16

state 26

    (10) expression -> expression TIMES . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . - expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . INTEGER
    (15) expression -> . DOUBLE
    (16) expression -> . CHAR
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression AND expression
    (24) expression -> . expression OR expression
    (25) expression -> . ID
    (26) expression -> . bool
    (27) bool -> . TRUE
    (28) bool -> . FALSE

    -               shift and go to state 12
    LPAREN          shift and go to state 7
    INTEGER         shift and go to state 13
    DOUBLE          shift and go to state 14
    CHAR            shift and go to state 15
    ID              shift and go to state 20
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    expression                     shift and go to state 43
    bool                           shift and go to state 16

state 27

    (11) expression -> expression DIVIDE . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . - expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . INTEGER
    (15) expression -> . DOUBLE
    (16) expression -> . CHAR
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression AND expression
    (24) expression -> . expression OR expression
    (25) expression -> . ID
    (26) expression -> . bool
    (27) bool -> . TRUE
    (28) bool -> . FALSE

    -               shift and go to state 12
    LPAREN          shift and go to state 7
    INTEGER         shift and go to state 13
    DOUBLE          shift and go to state 14
    CHAR            shift and go to state 15
    ID              shift and go to state 20
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    expression                     shift and go to state 44
    bool                           shift and go to state 16

state 28

    (17) expression -> expression GREATER . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . - expression
    (13) expression -> . LPAREN expression RPAREN
    (14) expression -> . INTEGER
    (15) expression -> . DOUBLE
    (16) expression -> . CHAR
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression GREATEQ expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NOTEQ expression
    (23) expression -> . expression AND expression
    (24) expression -> . expression OR expression
    (25) expression -> . ID
    (26) expression -> . bool
    (27) bool -> . TRUE
    (28) bool -> . FALSE

    -               shift and go to state 12
    LPAREN          shift and go to state 7
    INTEGER         shift and go to state 13
    DOUBLE          shift and go to state 14
    CHAR            shift and go to state 15
    ID              shift and go to state 20
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    expression                     shift and go to state 45
    bool                           shift and go to state 16

state 29
